--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -33,8 +33,7 @@
 }
 
 ::selection {
-	color: hsl(0, 0%, var(--bright100));
-	background: hsl(0, 0%, var(--bright30));
+	background: hsl(0, 0%, var(--bright90));
 }
 *, *::before, *::after {
 	margin: 0;
@@ -64,7 +63,7 @@ html[data-scheme="dark"] {
 	cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8' width='8px' height='8px' fill='white'%3E %3Ccircle cx='4' cy='4' r='4' opacity='.75'/%3E%3C/svg%3E") 4 4, crosshair;
 }
 body {
-	font: 1rem/1.75 "Playfair Display", var(--font);
+	font: 1rem/2 "Playfair Display", var(--font);
 	color: hsl(0, 0%, var(--bright20));
 	background: hsl(0, 0%, var(--bright100));
 	overflow: hidden scroll;
@@ -124,8 +123,8 @@ sup {
 	vertical-align: 10%;
 }
 code, pre {
-	font-family: "Fira Code", "Source Han Sans CN", "Source Han Sans SC", "Noto Sans CJK SC", "HanHei SC", "Microsoft Yahei", -apple-system, BlinkMacSystemFont, system-ui, monospace;
-	font-size: .875rem;
+	font-family: "Iosevka", "Source Han Sans CN", "Source Han Sans SC", "Noto Sans CJK SC", "HanHei SC", "Microsoft Yahei", -apple-system, BlinkMacSystemFont, system-ui, monospace;
+	font-size: .9375rem;
 }
 code {
 	padding: 0 .25rem;
@@ -158,7 +157,7 @@ pre code {
 	background: transparent;
 }
 button, input, textarea {
-	font: .9375rem/1.5 "Iosevka", var(--font);
+	font: .9375rem/1.5 "Iosevka Symbol", var(--font);
 	color: hsl(0, 0%, var(--bright20));
 	overflow: hidden;
 	resize: none;
@@ -596,7 +595,7 @@ header[role] .scheme path:nth-child(7) {
 }
 .footnote, .footnotes li[role]::before {
 	padding: 0 .25rem;
-	font-family: "Fira Code", monospace !important;
+	font-family: "Iosevka", monospace !important;
 	font-size: .75rem;
 	height: 1rem;
 	line-height: 1rem;
@@ -707,8 +706,8 @@ main article {
 }
 
 main article blockquote {
-	margin: 1.5rem 0 1.5rem;
-	padding: .25rem 0 .25rem .625rem;
+	margin: 1.5rem 2rem 1.5rem 1rem;
+	padding: .25rem 0 .25rem .75rem;
 	color: hsl(0, 0%, var(--bright40));
 	border-left: .25rem solid hsl(0, 0%, var(--bright80));
 	transition: .2s ease-in-out;
@@ -877,7 +876,7 @@ main article[data-layout="link"] a div {
 }
 main article header {
 	margin: .5rem 0 1.5rem;
-	font-family: "Playfair Display Symbol", "Playfair Display", "Iosevka", var(--font);
+	font-family: "Playfair Display Symbol", "Playfair Display", "Iosevka Symbol", var(--font);
 	font-size: .875rem;
 	color: hsl(0, 0%, 60%);
 }
@@ -992,7 +991,7 @@ main article [itemprop="articleBody"] {
 main article [itemprop="articleBody"],
 main article [itemprop="abstract"],
 main article [itemprop="notes"] {
-	font-family: "Iosevka", var(--font);
+	font-family: "Iosevka Symbol", var(--font);
 	text-align: justify;
 }
 main article [itemprop="notes"] {
@@ -1669,7 +1668,7 @@ footer[role] p:last-child {
 	content: attr(data-count);
 	margin: 0 .5rem 0 0;
 	padding: 0 .25rem;
-	font-family: "Fira Code", monospace;
+	font-family: "Iosevka", monospace;
 	font-size: .75rem;
 	vertical-align: .125rem;
 	background: hsl(0, 0%, var(--bright90));
@@ -1733,9 +1732,9 @@ footer[role] p:last-child {
 }
 [data-layout="weblog-page"] article:not([itemscope]) ul time {
 	flex: 0 0 auto;
-	margin: 0 0 .125rem;
-	font-family: "Fira Code", "Source Han Sans CN", "Source Han Sans SC", "Noto Sans CJK SC", "HanHei SC", "Microsoft Yahei", -apple-system, BlinkMacSystemFont, system-ui, monospace;
-	font-size: .875rem;
+	margin: .125rem 0 0;
+	font-family: "Iosevka", "Source Han Sans CN", "Source Han Sans SC", "Noto Sans CJK SC", "HanHei SC", "Microsoft Yahei", -apple-system, BlinkMacSystemFont, system-ui, monospace;
+	font-size: .9375rem;
 	opacity: .6;
 }
 @media only screen and (min-width: 64rem) {
@@ -2036,6 +2035,13 @@ footer[role] p:last-child {
 	font-weight: 400;
 	font-display: swap;
 	src: url("font.iosevka.woff2") format("woff2");
+}
+@font-face {
+	font-family: "Iosevka Symbol";
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url("font.iosevka.woff2") format("woff2");
 	unicode-range: U+00B7, U+00D7, U+2014, U+2022, U+2026, U+2605, U+2713, U+2717;
 }
 @font-face {
@@ -2053,12 +2059,4 @@ footer[role] p:last-child {
 	font-display: swap;
 	src: local(Playfair Display), local(PlayfairDisplay-Regular), url(https://fonts.gstatic.com/s/playfairdisplay/v20/nuFvD-vYSZviVYUb_rj3ij__anPXJzDwcbmjWBN2PKdFvXDXbtM.woff2) format("woff2");
 	unicode-range: U+002F, U+2019;
-}
-@font-face {
-	font-family: "Fira Code";
-	font-style: normal;
-	font-weight: 400;
-	font-display: swap;
-	src: url(https://fonts.gstatic.com/s/firacode/v9/uU9eCBsR6Z2vfE9aq3bL0fxyUs4tcw4W_D1sJVD7Ng.woff2) format('woff2');
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
